--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "serve": "http-server dist --port 9000"
   },
   "repository": {
     "type": "git",
@@ -27,13 +28,16 @@
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "html-webpack-plugin": "^5.6.0",
+    "http-server": "^14.1.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "workbox-window": "^7.0.0"
   }
 }
