--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Dicoding - movie-catalogue PWAs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "serve": "http-server dist --port 9000"
+    "serve": "http-server dist --port 9000",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -23,12 +24,22 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
+    "@jest/globals": "^29.6.1",
+    "@types/jest": "^29.5.3",
+    "babel-jest": "^29.6.1",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "fake-indexeddb": "^4.0.2",
     "html-webpack-plugin": "^5.6.0",
     "http-server": "^14.1.1",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
