--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http-server": "^14.1.1",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "jest-mock": "^29.7.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
