--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist --port 9000",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "e2e": "codeceptjs run --steps"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "babel-jest": "^29.6.1",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.6.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
@@ -41,6 +43,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "jest-mock": "^29.7.0",
+    "playwright": "^1.43.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
