--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "idb": "^8.0.0",
     "regenerator-runtime": "^0.14.1",
     "workbox-precaching": "^7.0.0",
